CHANGELOG
=========
7-31-2015 : v0.24 released
 - improved localhost detection
6-30-2015 : v0.23 released
 - fix : improved QOP auth
4-24-2015 : v0.22 released
 - fix : support localhost phone better
 - fix : reinvites would drop calls with 404
9-15-2014 : v0.21 released
 - new : tray icon (Windows 7 theme)
7-8-2014 : v0.20 released
 - new : added support for G722 codec
7-4-2014 : v0.19 released
 - new : added Queues (ACD : Automatic Call Distributor)
6-26-2014 : v0.18 released
 - new : created MSI package for Windows
 - new : the database is now stored in %ProgramData%\jpbxDB (for windows) or /var/lib/jpbxDB (unix)
 - new : the database is now auto created on first run
3-12-2014 : v0.17 released
 - fix : Java8 compatible
2-1-2014 : v0.16 released
 - new : now supports DTLS between two VoIP phones
1-29-2014 : v0.15 released
 - new : WebRTC Phone can now call a standard VoIP Phone (such as jPhoneLite) [*experimental*]
   - the VoIP stack can now do DTLS handshaking (server side only) and process SRTP data
12-24-2013 : v0.14 released
 - new : added WebRTC conferencing (basically just copied apprtc.appspot.com - swapped out AppEngine Channel for WebSockets)
   - simple conferencing rooms for two guests each
   - the built in web service just transfers the SDP offers between guests using WebSockets, the PBX doesn't do any real "sip" work yet
   - hope to expand on support to have Web based phones that register and make calls, etc.
     - this would require implementing STUN/TURN service, DTLS channels, etc. (not an easy task)
   - only Firefox seems to work ('experimental') - the WebRTC standard is still not finalized yet
12-17-2013 : v0.13 released
 - new : relay options : relayAudio/relayVideo to specify if PBX will relay audio/video streams (default = enabled)
 - new : option : MusicOnHold can now load a wav file which is played to anyone on hold (if relayAudio is enabled)